--- a/app/src/main/res/layout/activity_add_note.xml
+++ b/app/src/main/res/layout/activity_add_note.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#F5F5F5"
     android:orientation="vertical"
     android:padding="16dp"
     tools:context=".AddNoteActivity">
@@ -13,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Title"
-        android:inputType="text"/>
+        android:inputType="text" />
 
     <EditText
         android:id="@+id/edit_text_description"
@@ -22,21 +23,22 @@
         android:hint="Description"
         android:inputType="textMultiLine" />
 
-    
-  <TextView
+
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Priority:"
         android:layout_marginTop="16dp"
-        android:textAppearance="@android:style/TextAppearance.Medium"/>
+        android:text="Priority:"
+        android:textAppearance="@android:style/TextAppearance.Medium" />
 
     <NumberPicker
         android:id="@+id/number_picker_priority"
         android:layout_width="380dp"
         android:layout_height="wrap_content"
+        android:background="#F5F5F5"
         android:scrollbarThumbHorizontal="@color/colorPrimary"
         android:scrollbarThumbVertical="@color/colorAccent"
-        android:solidColor="#FFAAAA" />
+        android:solidColor="#BDBDBD" />
 
 
 </LinearLayout>
