--- a/app/src/main/res/menu/add_note_menu.xml
+++ b/app/src/main/res/menu/add_note_menu.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/save_note"
-        android:icon="@drawable/ic_save"
+        android:icon="@drawable/round_done_white_18dp"
         android:title="Save"
         app:showAsAction="ifRoom"/>
 </menu>
